549685 fix for status column being too long for approved in welsh and cauisng styling to knock off at 400 percent

--- a/src/Defra.PTS.Web.UI/wwwroot/stylesheets/application.css
+++ b/src/Defra.PTS.Web.UI/wwwroot/stylesheets/application.css
@@ -9251,3 +9251,7 @@ ul.language-toggle li:first-child {
 .hide-scrollbar {
     overflow-x: hidden !important; /* Hide the horizontal scrollbar */
 }
+
+.table-column-word-break {
+    word-break: break-word;
+}
